--- a/views/community.handlebars
+++ b/views/community.handlebars
@@ -129,7 +129,7 @@
                   <input type="hidden" name="reference" value="description" />
                   <div class="form-group">
                     <label for="communityDescription">Description</label>
-                    <div class="form-control" style="height:auto;" id="communityDescriptionHtml">{{{communityData.descriptionRaw}}}</div>
+                    <div class="form-control editable-text" style="height:auto;" id="communityDescriptionHtml">{{{communityData.descriptionRaw}}}</div>
                     <input type="hidden" name="proposedValue" id="communityDescription">
                   </div>
                   <button type="submit" class="button community-action-button">Create vote</button>
@@ -140,7 +140,7 @@
                   <input type="hidden" name="reference" value="rules" />
                   <div class="form-group">
                     <label for="communityRules">Rules</label>
-                    <div class="form-control" style="height:auto;" id="communityRulesHtml">{{{communityData.rulesRaw}}}</div>
+                    <div class="form-control editable-text" style="height:auto;" id="communityRulesHtml">{{{communityData.rulesRaw}}}</div>
                     <input type="hidden" name="proposedValue" id="communityRules">
                   </div>
                   <button type="submit" class="button community-action-button">Create vote</button>
@@ -157,7 +157,7 @@
                     <p class="small">
                       Unlike other community settings, the welcome message is changed immediately, with no vote.
                     </p>
-                    <div class="form-control" style="height:auto;" id="welcomeMessageHtml">{{{communityData.welcomeMessageRaw}}}</div>
+                    <div class="form-control editable-text" style="height:auto;" id="welcomeMessageHtml">{{{communityData.welcomeMessageRaw}}}</div>
                     <input type="hidden" name="proposedValue" id="welcomeMessage">
                   </div>
                   <button type="submit" class="button updateWelcomeMessage">Update</button>
