Made search box in navbar consistently styled

--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -52,10 +52,10 @@
 }
 
 #navbarSearchField {
-    color: $navigation-text;
-    background: $lightest-grey;
-    border-color: $medium-grey;
     width: 180px;
+    &::placeholder {
+      color: $navigation-text;
+    }
 }
 
 #topNav .nav-link,
