--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -350,7 +350,8 @@
     #notificationsContainer {
         min-width: 360px;
         max-height: 500px;
-        overflow-x: scroll;
+        overflow-y: scroll;
+        overflow-x: hidden;
     }
 }
 
