Apparently the uppercase text in the buttons is 'too shouty'

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -22,6 +22,7 @@ $lightest-pink: #fffafc;
 $light-pink: lighten($sweet-red, 40%);
 $darker-pink: lighten($sweet-red, 30%); // 'Recently commented' notifications
 $dark-pink: lighten($sweet-red, 20%); // ...why is dark pink darker than darker pink
+// Because darker pink is darker than light pink, but dark pink is as dark as pink gets
 
 $highlight: $lightest-pink;
 $placeholder: $dark-grey;
