--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -61,7 +61,7 @@ select {
     background: $dark-pink;
     border: $dark-pink;
     border-radius: 3px;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     box-shadow: $button-shadow;
     padding: .75rem .75rem;
     margin: 0;
