--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -61,7 +61,6 @@ select {
     background: $dark-pink;
     border: $dark-pink;
     border-radius: 3px;
-    // text-transform: uppercase;
     box-shadow: $button-shadow;
     padding: .75rem .75rem;
     margin: 0;
@@ -100,6 +99,10 @@ select {
 
     &.lowercase-button {
         text-transform: none;
+    }
+
+    &.uppercase-button {
+        text-transform: uppercase;
     }
 
     &.outline-button {
