--- a/views/partials/scriptPartials/onPostLoadScripts.handlebars
+++ b/views/partials/scriptPartials/onPostLoadScripts.handlebars
@@ -10,7 +10,7 @@ function showMoreAndImageLightboxing(e) {
     if (contentCont.height() > 550 && !contentCont.hasClass('content-warning-post')) {
         var content = contentCont.children();
         content.remove();
-        contentCont.append('<div class="abbreviated-content"></div><button type="button" class="button grey-button show-more" data-state="contracted">Show more</button>');
+        contentCont.append('<div class="abbreviated-content"></div><button type="button" class="button grey-button uppercase-button show-more" data-state="contracted">Show more</button>');
         contentCont.children('.abbreviated-content').append(content);
     }
     var images = contentCont.find('.post-images a');
@@ -75,7 +75,7 @@ $(function(){
                 $(this).replaceWith('<div class="link-preview-image"><i class="fas fa-link"></i></div>');
             })
         }
-        
+
         {{#if loggedIn}}
         var commentForms = newlyLoadedStuff.find('.editable-text');
         commentForms.each(function(){
