--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -79,7 +79,7 @@
         {{{this.internalPostHTML}}}
         {{#if this.contentWarnings}}
             </div>
-            <button type="button" class="button grey-button content-warning-show-more" data-state="contracted">Show post</button>
+            <button type="button" class="button grey-button content-warning-show-more uppercase-button" data-state="contracted">Show post</button>
         {{/if}}
     </section>
     <footer class="toolbar">
