--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -465,6 +465,10 @@ section {
     flex-wrap: wrap;
 }
 
+.user-list.collapse {
+    display:none;
+}
+
 .user-list-icon {
     display: flex;
     position: relative;
