--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -51,7 +51,7 @@
                 {{/contains}}
             </h2>
             <aside class="metadata">
-                <span class="post-timestamp" title="Posted {{this.fullTimestamp}}">
+                <span class="post-timestamp" data-timestamp="{{this.timestampMs}}" title="Posted " onmouseover="if(!this.stamped){this.title+=new Date(parseInt(this.getAttribute('data-timestamp'))).toLocaleTimeString(undefined,{weekday:'long',day:'numeric',month:'long',era:'short',timeZoneName:'short'});this.stamped=true;}">
                     {{this.parsedTimestamp}}
                 </span>
                 &nbsp;&middot;&nbsp;
@@ -64,7 +64,7 @@
                 </span>
                 {{#if lastEdited}}
                 &nbsp;&middot;&nbsp;
-                <span class="post-edited" title="Last edited {{this.fullEditedTimestamp}}">Edited</span>
+                <span class="post-edited" data-timestamp="{{this.editedTimestampMs}}" title="Last edited " onmouseover="if(!this.stamped){this.title+=new Date(parseInt(this.getAttribute('data-timestamp'))).toLocaleTimeString(undefined,{weekday:'long',day:'numeric',month:'long',era:'short', timeZoneName:'short'});this.stamped=true;}">Edited</span>
                 {{/if}}
             </aside>
         </div>
