--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,10 +28,6 @@
   <link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
   <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
 
-<!--<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-  <!-- <link rel="stylesheet" href="/css/reset.css"> -->
-  <!-- <link rel="stylesheet" href="/css/style_with_stolen_bootstrap_stuff.min.css"> -->
-  <!-- DANGEROUS EXPERIMENTAL NEW SCSS STYLESHEET -->
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/navbar-icons.css">
   <link id="darkModeStylesheet" rel="stylesheet" href="">
@@ -53,7 +49,8 @@
   {{> clientSideCodeErrorReporter }}
 
   {{#if loggedIn}}
-  {{> textEditorScripts}}
+    {{>newPostFormTemplatesContainer}}
+    <script src="/js/textEditorScripts.min.js"></script>
   {{/if}}
 
   {{> onPostLoadScripts }}
@@ -89,7 +86,7 @@
 {{> miscInteractivityScripts }}
 
 {{#if loggedIn}}
-{{> newPostOrCommentScripts }}
+<script src="/js/newPostOrCommentScripts.min.js"></script>
 {{/if}}
 
 </html>
