--- a/views/partials/usersidebar.handlebars
+++ b/views/partials/usersidebar.handlebars
@@ -84,7 +84,7 @@
           </button>
         {{/if}}
         <button class="button" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          More <i class=“fas fa-caret-down”></i>
+          More <i class="fas fa-caret-down"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
           {{#if flagged}}
