--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -51,7 +51,7 @@
                 {{/contains}}
             </h2>
             <aside class="metadata">
-                <span class="post-timestamp" data-timestamp="{{this.timestampMs}}" title="Posted " onmouseover="resolveTimestamp(this);">
+                <span class="post-timestamp" data-timestamp="{{this.timestampMs}}" onmouseover="resolveTimestamp(this);" ontouchstart="touchResolveTimestamp(this);">
                     {{this.parsedTimestamp}}
                 </span>
                 &nbsp;&middot;&nbsp;
@@ -64,7 +64,7 @@
                 </span>
                 {{#if lastEdited}}
                 &nbsp;&middot;&nbsp;
-                <span class="post-edited" data-timestamp="{{this.editedTimestampMs}}" title="Last edited " onmouseover="resolveTimestamp(this);">Edited</span>
+                <span class="post-edited" data-timestamp="{{this.editedTimestampMs}}" onmouseover="resolveTimestamp(this);" ontouchstart="touchResolveTimestamp(this);">Edited</span>
                 {{/if}}
             </aside>
         </div>
