--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -84,6 +84,27 @@
     </div>
   </div>
 
+  <div class="modal fade" id="boostPostLocationModal" tabindex="-1" role="dialog" aria-labelledby="boostPostLocationModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="boostPostLocationModalLabel">Boost post in a community</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <select id="communities-dropdown"></select>
+            <input type="hidden" id="original-post-id"></input>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="button grey-button" data-dismiss="modal">Close</button>
+            <button type="button" class="button boost-post-into-community">Boost <i class="fas fa-angle-right"></i></button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 {{> miscInteractivityScripts }}
