--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -20,14 +20,14 @@
                 </div>
             {{/if}}
         {{/if}}
-        {{#isnt ../context "community"}}
-            {{#if this.community._id}}
+        {{#eq this.type "community"}}
+            {{#isnt this.community._id ../identifier}}
                 <div class="community-notification">
                     <img alt="Display image for the community '{{this.community.name}}'" src="/images/communities/{{#if this.community.imageEnabled}}{{this.community.image}}{{else}}cake.svg{{/if}}" />
                     <span>Posted in <a href="/community/{{this.community.slug}}">{{this.community.name}}</a></span>
                 </div>
-            {{/if}}
-        {{/isnt}}
+            {{/isnt}}
+        {{/eq}}
     </aside>
     {{/isnt}}
     <header>
@@ -102,22 +102,28 @@
         {{/unless}}
         {{#eq this.privacy "public"}}
             {{#if ../loggedIn}}
-                {{#isnt this.type "community"}}
-                    <div class="toolbar-button-container">
-                        <form action="/{{#if youBoosted}}remove{{else}}create{{/if}}boost/{{this._id}}" method="post" class="post-toolbar-form">
-                            <button type="submit" class="button post-toolbar-button boost-post">
-                                {{#if youBoosted}}
-                                    <span class="fa-layers fa-fw">
-                                        <i class="fas fa-retweet"></i>
-                                        <i class="fas fa-slash" data-fa-transform="rotate-90"></i>
-                                    </span>
-                                {{else}}
-                                    <i class="fas fa-retweet"></i>
-                                {{/if}}
+                    <div class="toolbar-button-container dropdown">
+                        <button type="button" id="post-boosting-dropdown" class="button post-toolbar-button boost-post" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-retweet"></i>
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="post-boosting-dropdown">
+                            <form action="/{{#if youBoosted}}remove{{else}}create{{/if}}boost/{{this._id}}{{#unless youBoosted}}/userfeed{{/unless}}" method="post" class="post-toolbar-form">
+                                <button type="submit" class="boost-post dropdown-item">
+                                    {{#if youBoosted}}
+                                        <span class="fa-layers fa-fw">
+                                            <i class="fas fa-retweet"></i>
+                                            <i class="fas fa-slash" data-fa-transform="rotate-90"></i>
+                                        </span> Unboost post
+                                    {{else}}
+                                        <i class="fas fa-fw fa-user-circle"></i> Boost post to your profile
+                                    {{/if}}
+                                </button>
+                            </form>
+                            <button type="button" class="dropdown-item boost-post-userfeed" data-toggle="modal" data-target="#boostPostLocationModal" >
+                                <i class="fas fa-fw fa-leaf"></i> Boost post in a community
                             </button>
-                        </form>
+                        </div>
                     </div>
-                {{/isnt}}
             {{/if}}
         {{/eq}}
         {{#isnt this.type "draft"}}
