--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -68,7 +68,7 @@ section {
 }
 
 /* todo: move to somewhere that makes sense */
-.inactiveFeedCont{
+.inactive-feed-container{
     display:none;
 }
 
