--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,4 @@
-<section id="homeBody" class="row justify-content-center activeFeedCont">
+<section id="homeBody" class="row justify-content-center active-feed-container">
     <div class="col-lg-7">
         {{> newpostform }}
         <div id="checkNewPosts"></div>
