--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -186,8 +186,8 @@
             {{/if}}
         </section>
     {{/unless}}
-    {{#if @last}}
+    {{#and @last .../oldesttimestamp}}
     <div class="oldesttimestamp" style="display:none;">{{../oldesttimestamp}}</div>
-    {{/if}}
+    {{/and}}
 </article>
 {{/each}}
