--- a/views/partials/scriptPartials/miscInteractivityScripts.handlebars
+++ b/views/partials/scriptPartials/miscInteractivityScripts.handlebars
@@ -52,18 +52,23 @@ function checkForNewPosts(){
 
 $(function() {
 
+  function isStackableURL(url){
+    return (!url.match(/^\/settings$/) && !url.match(/^\/communities$/) && !url.match(/^\/logout$/) && !url.match(/^\/signup$/) && !url.match(/^\/api\/.*$/))
+
+  }
+
   history.scrollRestoration = 'manual';
 
   var historyStateId = 0;
   var prePopState = 0;
 
-  history.replaceState({infS:activeScrollPath,scrt:0,hid:historyStateId++},'',window.location.href);
-  var nonStackablePages = ['/settings','/communities','/support','/logout','/signup','login'];
+  history.replaceState({infS:activeScrollPath,scrt:0,hid:historyStateId++,url:window.location.href},'',window.location.href);
 
 $('body').on('click','a',function(e){
   var href = this.getAttribute('href')
-  if(href.substring(0,1)=="/" && !nonStackablePages.includes(href)){
+  if(href.substring(0,1)=="/" && isStackableURL(href)){
     e.preventDefault();
+    needPostsOlderThan = ""+(new Date().getTime());
     if(href==window.location.pathname){
       $(window).scrollTop(0);
       restartInfiniteScroll();
@@ -74,33 +79,43 @@ $('body').on('click','a',function(e){
     var postsContainer = $('.postsContainer');
     postsContainer.infiniteScroll('destroy');
     postsContainer.removeClass('postsContainer').addClass('inactivePostsContainer');
-    var prevFeedCont = $('.activeFeedCont');
+    var prevFeedCont = $('.active-feed-container');
     prevFeedCont.nextAll().remove();
-    prevFeedCont.removeClass('activeFeedCont').addClass('inactiveFeedCont');
-    $.get(this.href+'/internalized',function(data){
-      $('.inactiveFeedCont').last().after(data);
+    prevFeedCont.removeClass('active-feed-container').addClass('inactive-feed-container');
+    $.get({url:fullDestUrl+'/internalized',success:function(data){
+      $('.inactive-feed-container').last().after(data);
+      var editor = $('.active-feed-container').find("#editor");
+      if(editor.length){
+        attachQuill(editor[0]);
+      }
       startInfiniteScroll();
-      history.replaceState({infS:history.state.infS,scrt:scrt,hid:history.state.hid},'',window.location.href);      
-      history.pushState({infS: activeScrollPath,scrt:0,hid:historyStateId++},'',fullDestUrl);
+      history.replaceState({infS:history.state.infS,scrt:scrt,hid:history.state.hid,url:window.location.href},'',window.location.href);      
+      history.pushState({infS: activeScrollPath,scrt:0,hid:historyStateId++,url:fullDestUrl},'',fullDestUrl);
       prePopState = historyStateId;
-    })
+    },error:function(){
+      window.location.href = fullDestUrl;
+    }})
   }
 })
 
 window.addEventListener('popstate',function(e){
   activeScrollPath = e.state.infS;
-  var oldActive = $('.activeFeedCont');
+  var oldActive = $('.active-feed-container');
   var newActive = prePopState < e.state.hid ? oldActive.next() : oldActive.prev();
-  oldActive.removeClass('activeFeedCont').addClass('inactiveFeedCont');
-  newActive.removeClass('inactiveFeedCont').addClass('activeFeedCont');
-  var oldPostCont = oldActive.find('.postsContainer');
-  oldPostCont.infiniteScroll('destroy');
-  oldPostCont.removeClass('postsContainer').addClass('inactivePostsContainer');
-  newActive.find('.inactivePostsContainer').removeClass('inactivePostsContainer').addClass('postsContainer');
-  startInfiniteScroll();
-  prePopState = e.state.hid;
-  $(window).scrollTop(e.state.scrt);
-  console.log(e.state.scrt);
+  if(newActive.length){
+    oldActive.removeClass('active-feed-container').addClass('inactive-feed-container');
+    newActive.removeClass('inactive-feed-container').addClass('active-feed-container');
+    var oldPostCont = oldActive.find('.postsContainer');
+    oldPostCont.infiniteScroll('destroy');
+    oldPostCont.removeClass('postsContainer').addClass('inactivePostsContainer');
+    newActive.find('.inactivePostsContainer').removeClass('inactivePostsContainer').addClass('postsContainer');
+    startInfiniteScroll();
+    prePopState = e.state.hid;
+    $(window).scrollTop(e.state.scrt);
+    console.log(e.state.scrt);
+  }else{
+    window.location.href = e.state.url;
+  }
 })
 
     $(window).scroll(function() {
