--- a/views/partials/scriptPartials/onPostLoadScripts.handlebars
+++ b/views/partials/scriptPartials/onPostLoadScripts.handlebars
@@ -2,22 +2,24 @@
 
 
 function startInfiniteScroll() {
-    $('.postsContainer').infiniteScroll({
-      //infinite scroll loading is timestamp based; we want to load posts just older than the oldest post yet loaded, or we use the current time as a placeholder value
-        //if we've just gotten to this page, or if we've just made a post the feed is emptied and needPostsOlderThan is set so that the new post loads on top of the feed
-        path: function() {
-            if ($(".oldesttimestamp").length) {
-                //if there are posts on the page, the server has provided the timestamp of the oldest post yet loaded in a hidden element that we will find here
-                return activeScrollPath + $(".oldesttimestamp").last().html();
-            }
-            //this is for when the feed is currently empty and is being loaded/reloaded
-            return activeScrollPath + needPostsOlderThan;
-        },
-        append: '.post',
-        prefill: true,
-        history: false,
-        status: '.page-load-status'
-    });
+    if(activeScrollPath){
+        $('.postsContainer').infiniteScroll({
+        //infinite scroll loading is timestamp based; we want to load posts just older than the oldest post yet loaded, or we use the current time as a placeholder value
+            //if we've just gotten to this page, or if we've just made a post the feed is emptied and needPostsOlderThan is set so that the new post loads on top of the feed
+            path: function() {
+                if ($(".oldesttimestamp").length) {
+                    //if there are posts on the page, the server has provided the timestamp of the oldest post yet loaded in a hidden element that we will find here
+                    return activeScrollPath + $(".oldesttimestamp").last().html();
+                }
+                //this is for when the feed is currently empty and is being loaded/reloaded
+                return activeScrollPath + needPostsOlderThan;
+            },
+            append: '.post',
+            prefill: true,
+            history: false,
+            status: '.page-load-status'
+        });
+    }
 }
 
 function restartInfiniteScroll(timestamp) {
