--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -27,9 +27,11 @@
 <script>
 $(function() {
     activeScrollPath = null;
+    
+    var thisContainer = $('.active-feed-container');
 
-  if ($('.post-images').length > 0) {
-      var imagesLoaded = $('.post-single-image').length;
+  if (thisContainer.find('.post-images').length > 0) {
+      var imagesLoaded = thisContainer.find('.post-single-image').length;
       console.log("images loaded: " + imagesLoaded);
       var imagesLightboxed = 0;
       //i think when you're looking at a single post it makes perfect sense to be able to slideshow through all the images in the post + comments at once  
@@ -37,8 +39,8 @@ $(function() {
     }
   
 {{#if loggedIn}}
-    var commentForm = undefined;
-    if(commentForm = document.getElementsByClassName('editable-text')[0]){
+    var commentForm = thisContainer.find('.editable-text')[0];
+    if(commentForm){
         attachQuill(commentForm,'Reply to this post with a good reply')
     }
 
