--- a/views/partials/posts_v2.handlebars
+++ b/views/partials/posts_v2.handlebars
@@ -192,7 +192,7 @@
             {{/if}}
         </section>
     {{/unless}}
-    {{#and @last .../oldesttimestamp}}
+    {{#and @last ../oldesttimestamp}}
     <div class="oldesttimestamp" style="display:none;">{{../oldesttimestamp}}</div>
     {{/and}}
 </article>
